syntax = "proto3";
package ibc.applications.convo.v1;

import "google/api/annotations.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/applications/convo/types";

// Query defines the gRPC querier service.
service Query {
    // PendingMessage queries the pending message of a sender-receiver convo over a given channel
    rpc PendingMessage(QueryPendingMessageRequest) returns (QueryPendingMessageResponse) {
        option (google.api.http).get = "/ibc_convo/v1beta1/pending_message/sender/{sender}/receiver/{receiver}/channel/{channel}";
    }
    // InboxMessage queries the inbox message of a receiver from a sender over a given channel
    rpc InboxMessage(QueryInboxMessageRequest) returns (QueryInboxMessageResponse) {
        option (google.api.http).get = "/ibc_convo/v1beta1/inbox_message/receiver/{receiver}/sender/{sender}/channel/{channel}";
    }
    // OutboxMessage queries the outbox message of a sender to a receiver over a given channel
    rpc OutboxMessage(QueryOutboxMessageRequest) returns (QueryOutboxMessageResponse) {
        option (google.api.http).get = "/ibc_convo/v1beta1/outbox_message/sender/{sender}/receiver/{receiver}/channel/{channel}";
    }
}

// QueryPendingMessageRequest is the request type for the Query/PendingMessage RPC method
message QueryPendingMessageRequest {
    // sender address
    string sender = 1;
    // receiver address
    string receiver = 2;
    // channel identifier for sender chain
    string channel = 3;
}

// QueryPendingMessageResponse is the response type for the Query/PendingMessage RPC method
message QueryPendingMessageResponse {
    string message = 1;
}

// QueryInboxMessageRequest is the request type for the Query/InboxMessage RPC method
message QueryInboxMessageRequest {
    // sender address
    string sender = 1;
    // receiver address
    string receiver = 2;
    // channel identifier for destination chain
    string channel = 3;
}


// QueryInboxMessageResponse is the response type for the Query/InboxMessage RPC method
message QueryInboxMessageResponse {
    string message = 1;
}

// QueryOutboxMessageRequest is the request type for the Query/OutboxMessage RPC method
message QueryOutboxMessageRequest {
    // sender address
    string sender = 1;
    // receiver address
    string receiver = 2;
    // channel identifier for sender chain
    string channel = 3;
}


// QueryOutboxMessageResponse is the response type for the Query/OutboxMessage RPC method
message QueryOutboxMessageResponse {
    string message = 1;
}